release(0.9.0): integrate v0.9.0 milestone into main (#207)
* chore(release): open v0.9.0 development line — SNAPSHOT bump + generic-decode ROADMAP entry

Post-v0.8.0-tag housekeeping (release-notes §9 step: restore the next -SNAPSHOT on
the trunk after the tag). development/0.8.0 was deleted after the release merged to
main (tag v0.8.0); this opens the next integration line off main.

- POM 0.8.0 → 0.9.0-SNAPSHOT across all 10 modules (reactor validates green).
- ROADMAP: new v0.9 deferred entry "HTTP Client: Generic-Element Decode
  (TypeReference-style facade overload)". The Class<?>-based decode SPI cannot
  carry a parameterized element type — findAll → List<Widget> decoded via
  List.class yields List<LinkedHashMap> (erasure). Resolution is a generics-carrying
  overload on the KERNEL FACADE (KernelWebClient), implementation-blind so no Jackson
  TypeReference crosses the SPI boundary — explicitly NOT a codec change in
  exeris-tooling. Placed alongside the deferred Symmetric Body Codec / Retry-Backoff
  client-SPI entries (same decode surface).

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>

* docs(observability): record open-core observability boundary as ADR-039 (#162)

Establish the public/open-core anchor for the observability open<->enterprise
boundary ahead of v0.9 Sprint 1 (KernelDiagnostics SPI, ADR-033).

- New ADR-039 (public, exeris-kernel): exeris-telemetry-spec is a SHARED open
  wire contract with two producers (open-core kernel-core L0 crash buffer +
  enterprise live-stream/crash-ring); exactly one canonical decoder per format;
  cut = crash-file decode is open-core, live-stream decode is enterprise; kernel
  is producer-only. Standalone public ADR so open-core docs never deep-link the
  enterprise-private ADR-018 (dead link in the public tree).
- telemetry.md / bootstrap.md: align crash-file naming .bin -> .ring (canon used
  by exeris-telemetry-spec + decoder tooling); rewrite the exeris-decoder
  narrative to a single canonical op